# GlyPhy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: BlockEditor.tsx  CloudModal.tsx  CommandPalette.tsx  ContextPanel.tsx  Icons.tsx  NoteSearch.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: api.ts  dnd.tsx  markdown.tsx  mockBackend.ts  supabase.ts  types.ts
src/state/: store.ts  sync.ts
src/styles/: app.css  global.css
src/views/: GraphView.tsx  NotesView.tsx  TasksView.tsx
supabase/: schema.sql
